# Energy-Operations-Intelligence-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: development.yaml  production.yaml  units.yaml
docs/: acceptance_criteria.md  assumptions_and_limits.md  business_case.md  data_dictionary.md  data_model.md  kpi_dictionary.md  measurement_conventions.md  personas.md  risk_register.md  success_criteria.md
docs/diagrams/: er_diagram.md
src/: config.py  logging_config.py  main.py  random_utils.py
src/features/: unit_conversions.py
tests/unit/: test_config.py  test_unit_conversions.py
